packages/public-client/src/app/components/pages/home/home.component.scss
@use 'sass:math';
@use '../../scss/utility';

$headerColor: utility.$dive-gray-dk3;

:host {
  display: flex;
  flex-direction: column;
  height: 100vh;

  header {
    z-index: 4;
    position: sticky;
    top: 0;
    left: 0rem;
    width: 100%;
    box-shadow: 0px 4px 4px utility.$dive-black;    

    img {
      z-index: 2;
      width: 15vw;
      position: absolute;
      top: -11vw;
      left: 0rem;
      padding: 1rem;
      $t1: 20%;
      $t2: 44%;
      //background-image: linear-gradient(163deg, utility.$dive-black 0%, utility.$dive-black $t1, $headerColor ($t1 + 0.5%), $headerColor $t2, utility.$dive-black $t2 + 0.3%, utility.$dive-black $t2 + 0.8%, transparent $t2 + 1.2%);
      background-image: linear-gradient(163deg, utility.$dive-black 0%, utility.$dive-black $t1, $headerColor ($t1 + 0.5%), $headerColor $t2, transparent $t2 + 1.2%);
      border-bottom-right-radius: 50%;

      transition: top 0.65s ease;

      &.showLogo {
        top: 0rem;
        //display: inline-flex;
        // transform: display(inline-flex);
        // transition: all 1s;
      }
    }

    nav {
      font-size: 1.25vw;
      background-color: $headerColor; //rgba(0,0,0,0.75);
      color: utility.$dive-white;
      font-family: 'Righteous', cursive;
      
      ul {
        display: flex;
        justify-content: center;
        gap: 1em;
        padding: 0.25rem 0;
        margin: 0;
        list-style-type: none;

        li {
          padding: 0.5rem 1rem;

        }
      }
    }

    $boat-cam-size: 15vw;

    .boat-cam {
      z-index: 5;
      position: relative;
      display: flex;
      justify-content: center;
      align-items: center;
      position: absolute;
      right: 1vw;
      top: 1vw;
      background-color: utility.$dive-black;
      color: utility.$dive-white;
      width: $boat-cam-size;
      height: $boat-cam-size;
      border-radius: math.div($boat-cam-size, 2);
      font-size: math.div($boat-cam-size, 4);
      text-align: center;
    }
  }

  // end header

  main {
    flex: 1;

    .intro-section {
      position: relative;

      app-mouse-facer {
        position: absolute;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
      }

      &-content {
        position: relative;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;

        .intro {
          height: 50vw;

          h1.title {
            z-index: 0;
            display: inline-block;
            position: relative;
            top: 9vw;
            right: -3vw;
            transform: translate(-50%) skew(350deg, 346deg) rotate(0deg);;
            //max-width: 40vw;
            margin: 0;
            //padding: 0 0 0 4vw;
            text-align: right;
            
            font-size: 4vw;
            @include utility.media-breakpoint-gte(sm) {
              font-size: 3.5vw;
            }
            @include utility.text-double-outline('Local Events Live Sports Table Games');

            span {
              //margin: 0 1.25rem;
            }
          }          
        } // end intro

        .contact-rounded-top {
          height: 6rem;
          width: 100%;
          display: flex;
          margin-top: -1rem;
          > div {
            flex: 1;
            border-top-left-radius: 50%;
            border-top-right-radius: 50%;
            background-color: utility.$dive-red;
          }
        }
        .contact-container {
          z-index: 1;
          // display: flex;
          // align-items: center;
          // justify-content: space-around;
          width: 100%;
          height: 16vw;
          padding: 2vw 5vw 18vw;
          @include utility.media-breakpoint-gte(md) {
            padding: 2vw 10vw 16.5vw;            
          }
          background-color: utility.$dive-red;
          background-image: linear-gradient(0deg, utility.$dive-red 0%, utility.$dive-red 99%, utility.$dive-black 100%);

          .contact-content {
            //margin: -3vw;
            $headerFontSize: 2.2vw;
            $largeInfoFontSize: 2.2vw;
            $smallInfoFontSize: 1.5vw;

            top: 50vw;
            left: 0;
            display: flex;
            justify-content: center;
            flex-flow: wrap;
            color: utility.$dive-white;
            //border-bottom-left-radius: 50%;
            //border-bottom-right-radius: 50%;
            //border-radius: 50%;
            text-align: center;
            text-shadow: 2px 2px 2px utility.$dive-black;

            > div {            
              flex: 1;
              display: flex;
              flex-direction: column;
              justify-content: flex-start;
              align-items: center;
              padding: 0 1rem;            
              //border-bottom-left-radius: 42%;
              //border-bottom-right-radius: 42%;
              //border-radius: 50%;            
              h2 {
                margin: 0;
                padding-top: 0.5rem;
                font-size: 1rem;
                font-weight: normal;
                @include utility.media-breakpoint-gte(sm) {
                  font-size: $headerFontSize;
                }
                //text-transform: uppercase;              
              }
              p {
                margin: 0;
                font-size: $smallInfoFontSize;
                &:last-child {
                  font-size: $smallInfoFontSize;
                  @include utility.media-breakpoint-gte(sm) {
                    font-size: $largeInfoFontSize;
                  }
                //font-weight: bold;
                }
              }
              &.address {
                p {
                  font-size: $largeInfoFontSize;
                  //font-weight: bold;
                }
                p:last-child {
                  font-size: $smallInfoFontSize;
                  font-weight: normal;
                }
              }
              &.hours {
                //padding-bottom: 1rem;
              }
              &.phone {
                p {
                  font-size: $largeInfoFontSize;
                }
                p:last-child {
                  font-size: 1.3vw;
                }
              }
              
            }            
          } // end contact-content          
        } // end contact

        $waveSize: 4vw;
        .waves-separator {
          position: relative;
          z-index: 1;
          display: flex;
          height: $waveSize;
          width: 100%;
          margin-top: -($waveSize - 0.01vw);
          background-image: url('/assets/images/wave.svg');
          // > div {
          //   position: relative;
          //   flex: 1;
          //   min-height: 4rem;
          //   border-radius: 0 0 50% 50%;
          //   background-color: utility.$dive-red;
          // }
        }

        .blurb {
          position: relative;
          display: flex;
          flex-direction: column;
          align-items: center;
          padding: 2vw 0.5vw;
          text-align: center;
          @include utility.media-breakpoint-gte(sm) {
            padding: 4vw 1vw;
          }
          svg { 
            display: block;
            width: 5vw;
            margin-top: 2vw;
            @include utility.media-breakpoint-gte(sm) {
              width: 4.5vw;
            }            
            g path {              
              fill: utility.$dive-red;
            }            
          }  
          .diver {
            z-index: -1;
            position: absolute;
            top: 0; bottom: 0; left: 0; right: 0;
            display: flex;
            justify-content: center;
            align-items: center;
            padding-bottom: 8vw;
            //top: 10vw;
            //left: 10vw;
            svg {
              width: 90vw;
              g path {
                fill: utility.$dive-gray-dk3;
              }
            }
          }        
          // img, span {
          //   display: block;
          //   width: 5vw;
          //   margin-top: 2vw;
          //   @include utility.media-breakpoint-gte(sm) {
          //     width: 4.5vw;
          //   }            
          // }
          p {
            max-width: 80vw;
            font-size: 3vw;
            @include utility.media-breakpoint-gte(sm) {
              max-width: 60vw;
              font-size: 2.75vw;
            }
            line-height: 1.75;

            span {
              display: block;
              font-family: 'Bevan', serif;
              @include utility.text-double-outline('Dive Inn');
              font-size: 3.8vw;
              line-height: 1.6;
              //font-weight: bold;
              //color: utility.$dive-red;
            }
          }
        }
      }
    }

    app-topic-section {
      z-index: 0;
      position: relative;
      display: block;
      margin: 0 auto;
      width: 100vw;

      @include utility.media-breakpoint-gte(sm) {
        width: 80vw;
      }

      @include utility.media-breakpoint-gte(lg) {
        width: 75vw;
      }

      @include utility.media-breakpoint-gte(ws) {
        width: 70vw;
      }
    }
  }

  // end main

  footer {
    z-index: 1;
    display: flex;
    flex-direction: column;
    background-color: rgba(200, 40, 20, 0.7); //utility.$dive-red; //rgba(0,0,0,0.75);
    color: utility.$dive-white;

    .navigation {
      display: flex;
      flex-direction: row;
    }
  }

  // end footer
}

